fix(app): fixed app height on mobile.

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -4,6 +4,10 @@
   background-color: $primary;
   width: 100%;
   position: relative;
+
+  @media (max-width: 960px) {
+    height: 100%;
+  }
 }
 
 @import './components/components.scss';
