--- a/client/app/common/common.scss
+++ b/client/app/common/common.scss
@@ -42,8 +42,14 @@ app {
 
 		main {
 			height: 100%;
+		}
+	}
 
-			@media (max-width: 960px) {
+	@media (max-width: 960px) {
+		height: 100%;
+
+		#wrapper {
+			main {
 				height: auto;
 			}
 		}
