--- a/client/app/components/home/styles/home.scss
+++ b/client/app/components/home/styles/home.scss
@@ -95,10 +95,10 @@
     color: white;
   }
 
-  @media (max-width: 414px) {
+  @media (max-width: 960px) {
     #form {
       position: relative;
-      padding: 30% 0;
+      padding: 15% 0;
     }
   }
 
